--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
- 
+  
 }
 
 a {
@@ -386,24 +386,56 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+
+#bby {
+  width: 100%;
+  background: url("../img/cake2.jpg") top center;
+  background-size: cover;
+  position: relative;
+}
+
+#bby h1 {
+  margin: 0;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 72px;
+  color: #113650;
+  font-family: "Poppins", sans-serif;
+}
+
+#bby h2 {
+  color: #5e5e5e;
+  margin: 10px 0 0 0;
+  font-size: 22px;
+}
+
+#bby .btn-get-started {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  display: inline-block;
+  padding: 14px 50px;
+  border-radius: 5px;
+  transition: 0.5s;
+  margin-top: 30px;
+  color: #fff;
+  background: #2487ce;
+}
+
 #hero {
   width: 100%;
   height: 100vh;
   position: relative;
-
+  background: url("../img/cake2.jpg") top center;
   background-size: cover;
-  background-color: #b66027;
   position: relative;
 }
 
 #hero:before {
   content: "";
   background: rgba(255, 255, 255, 0.8);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
+  
 }
 
 #hero .container {
@@ -447,7 +479,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 100px;
 }
 
-#hero .icon-box {
+.icon-box {
   padding: 50px 30px;
   position: relative;
   overflow: hidden;
@@ -633,7 +665,7 @@ section {
 
 .counts .count-box p {
   padding: 8px 0 0 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 14px;
   color: #1e6ca6;
@@ -1895,10 +1927,11 @@ section {
   text-decoration: none;
 }
 
-.cardx {
+.card-c {
   transition: transform 0.2s ease;
+  background: #3194db;
 }
 
-.cardx:hover {
-  transform: scale(1.1);
+.card-c:hover {
+  transform: scale(1.5);
 }
